--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --orange: #FF9315;
   --red: #FF3D3D;
   --green: #22ff52;
+  --blue: #24a0ed;
 }
 
 * {
@@ -54,17 +55,24 @@ html {
   background-color: black;
   opacity: .8;
 }
-
+.action h3 {
+  border-bottom: 2px solid var(--orange);
+  padding: 10px 0;
+  margin: 20px 0;
+  color: white;
+}
 .button {
   display: flex;
   align-items: center;
   column-gap: 10px;
   margin: auto;
 }
-.button h3 {
+.add-data {
+  margin-top: 20px;
   color: white;
+  column-gap: 10px;
 }
-.button button {
+button {
   font-size: 10px;
   padding: 8px 16px;
   border: none;
@@ -72,13 +80,25 @@ html {
   cursor: pointer;
   border-radius: 2px;
 }
+button:hover {
+  opacity: .8;
+}
+.input-field {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  column-gap: 10px;
+}
+.input-field input {
+  height: 30px;
+}
+.add {
+  margin: 0;
+  background-color: var(--blue);
+}
 .clear {
   background-color: var(--red);
 }
 .predict { 
   background-color: var(--green);
-}
-
-.button button:hover {
-  opacity: .8;
 }
